# student-resarch-data-exfiltration-agent

./: .env.example  .gitignore  README.md  main.py  models.py  pyproject.toml  report_graph.html  setup_database.py  website_injection.txt
agent/: email_agent.py  employee_agent.py  models.py  personal_assistant.py  web_agent.py
tools/: sql_tool.py  web_scan_tool.py
